@@ -19,7 +19,7 @@ node {
         }
 
         stage('Build with test') {
-           sh "MAVEN_OPTS='-Xmx1024m -XX:MaxPermSize=256m' mvn clean install"
+            sh "mvn clean install"
         }
 
         stage('Sonarqube Analysis') {
